--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,176 @@
+
+@misc{imageGrow,
+author = {Horaczek, Stan},
+title = {How Many Photos Are Uploaded to The Internet Every Minute?},
+month = jun,
+year = {2014},
+url = {http://www.popphoto.com/news/2013/05/how-many-photos-are-uploaded-to-internet-every-minute}
+}
+
+@article{Jegou2012HAL,
+    hal_id = {inria-00633013},
+    url = {http://hal.inria.fr/inria-00633013},
+    title = {{Aggregating local image descriptors into compact codes}},
+    author = {J{\'e}gou, Herv{\'e} and Perronnin, Florent and Douze, Matthijs and S{\'a}nchez, Jorge and P{\'e}rez, Patrick and Schmid, Cordelia},
+    affiliation = {TEXMEX - INRIA - IRISA , Xerox Research Centre Europe [Meylan] , LEAR - INRIA Grenoble Rh{\^o}ne-Alpes / LJK Laboratoire Jean Kuntzmann , SED (INRIA Grenoble Rh{\^o}ne-Alpes) , Technicolor R \& I},
+    publisher = {IEEE},
+    pages = {1704-1716},
+    journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+    volume = {34},
+    number = {9 },
+    note = {QUAERO },
+    audience = {international },
+    doi = {10.1109/TPAMI.2011.235 },
+    year = {2012},
+    month = Sep,
+    pdf = {http://hal.inria.fr/inria-00633013/PDF/jegou\_aggregate.pdf},
+}
+
+
+@inproceedings{Perronnin2007,
+  author    = {Florent Perronnin and
+               Christopher R. Dance},
+  title     = {Fisher Kernels on Visual Vocabularies for Image Categorization},
+  booktitle = {CVPR},
+  year      = {2007},
+  ee        = {http://dx.doi.org/10.1109/CVPR.2007.383266},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@inproceedings{Perronnin:2010:IFK:1888089.1888101,
+ author = {Perronnin, Florent and S\'{a}nchez, Jorge and Mensink, Thomas},
+ title = {Improving the Fisher Kernel for Large-scale Image Classification},
+ booktitle = {Proceedings of the 11th European Conference on Computer Vision: Part IV},
+ series = {ECCV'10},
+ year = {2010},
+ isbn = {3-642-15560-X, 978-3-642-15560-4},
+ location = {Heraklion, Crete, Greece},
+ pages = {143--156},
+ numpages = {14},
+ url = {http://dl.acm.org/citation.cfm?id=1888089.1888101},
+ acmid = {1888101},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
+@inproceedings{Jegou2010,
+    hal_id = {inria-00548637},
+    url = {http://hal.inria.fr/inria-00548637},
+    title = {{Aggregating local descriptors into a compact image representation}},
+    author = {J{\'e}gou, Herv{\'e} and Douze, Matthijs and Schmid, Cordelia and P{\'e}rez, Patrick},
+    affiliation = {TEXMEX - INRIA - IRISA , LEAR - INRIA Grenoble Rh{\^o}ne-Alpes / LJK Laboratoire Jean Kuntzmann , Laboratoire Jean Kuntzmann - LJK , Technicolor R \& I},
+    booktitle = {{CVPR 2010 - 23rd IEEE Conference on Computer Vision \& Pattern Recognition}},
+    publisher = {IEEE Computer Society},
+    pages = {3304-3311},
+    address = {San Francisco, United States},
+    audience = {international },
+    doi = {10.1109/CVPR.2010.5540039 },
+    year = {2010},
+    pdf = {http://hal.inria.fr/inria-00548637/PDF/jegou\_compactimagerepresentation.pdf},
+}
+
+
+@inproceedings{Jegou2009,
+  author    = {Herve Jegou and
+               Matthijs Douze and
+               Cordelia Schmid},
+  title     = {On the burstiness of visual elements},
+  booktitle = {CVPR},
+  year      = {2009},
+  pages     = {1169-1176},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/CVPRW.2009.5206609},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{Perronnin2010,
+  author = {Perronnin, Florent and Liu, Yan and Sánchez, Jorge and Poirier, Herve},
+  booktitle = cvpr,
+  publisher = {IEEE},
+  title = {Large-scale image retrieval with compressed Fisher vectors.},
+   year = 2010
+}
+
+
+
+
+@inproceedings{Krapac2011,
+    hal_id = {inria-00612277},
+    title = {{Modeling Spatial Layout with Fisher Vectors for Image Categorization}},
+    author = {Krapac, Josip and Verbeek, Jakob and Jurie, Fr{\'e}d{\'e}ric},
+    booktitle =iccv,
+    year = {2011},
+    month = Nov,
+}
+
+@InProceedings{Simonyan2013,
+  author       = "Simonyan, K. and Parkhi, O. M. and Vedaldi, A. and Zisserman, A.",
+  title        = "{F}isher {V}ector {F}aces in the {W}ild",
+  booktitle    = "British Machine Vision Conference",
+  year         = "2013",
+}
+
+@inproceedings{Torii2013,
+author = {Torii, A. and Sivic, J. and Pajdla, T. and Okutomi, M.},
+title = {Visual Place Recognition with Repetitive Structures},
+booktitle = cvpr,
+year = {2013},
+}
+
+@inproceedings{Gronat2013,
+  added-at = {2013-10-17T00:00:00.000+0200},
+  author = {Gronat, Petr and Obozinski, Guillaume and Sivic, Josef and Pajdla, Tomás},
+  biburl = {http://www.bibsonomy.org/bibtex/2f9679e952dde036829e0d16b85719ae8/dblp},
+  booktitle = {CVPR},
+  ee = {http://dx.doi.org/10.1109/CVPR.2013.122},
+  interhash = {1beed3671c5cf211b040a00b4666d79e},
+  intrahash = {f9679e952dde036829e0d16b85719ae8},
+  keywords = {dblp},
+  pages = {907-914},
+  publisher = {IEEE},
+  timestamp = {2013-10-17T00:00:00.000+0200},
+  title = {Learning and Calibrating Per-Location Classifiers for Visual Place Recognition.},
+  url = {http://dblp.uni-trier.de/db/conf/cvpr/cvpr2013.html#GronatOSP13},
+  year = 2013
+}
+
+
+@inproceedings{Torii2011,
+  added-at = {2012-01-20T00:00:00.000+0100},
+  author = {Torii, Akihiko and Sivic, Josef and Pajdla, Tomás},
+  biburl = {http://www.bibsonomy.org/bibtex/2656fc04af378a45d9481fe4905d9868c/dblp},
+  booktitle = {ICCV Workshops},
+  ee = {http://dx.doi.org/10.1109/ICCVW.2011.6130230},
+  interhash = {4b1628b557b8bd04492b2ed015a804f8},
+  intrahash = {656fc04af378a45d9481fe4905d9868c},
+  isbn = {978-1-4673-0062-9},
+  keywords = {dblp},
+  pages = {102-109},
+  publisher = {IEEE},
+  timestamp = {2012-01-20T00:00:00.000+0100},
+  title = {Visual localization by linear combination of image descriptors.},
+  url = {http://dblp.uni-trier.de/db/conf/iccvw/iccvw2011.html#ToriiSP11},
+  year = 2011
+}
+
+
+@inproceedings{Majdik2013,
+  added-at = {2014-01-10T00:00:00.000+0100},
+  author = {Majdik, Andras and Albers-Schoenberg, Yves and Scaramuzza, Davide},
+  biburl = {http://www.bibsonomy.org/bibtex/26989731bbfce6c43fea3af7c1c919b5d/dblp},
+  booktitle = {IROS},
+  ee = {http://dx.doi.org/10.1109/IROS.2013.6696925},
+  interhash = {2e00eb56dc2bef1aa5e18294cb0da456},
+  intrahash = {6989731bbfce6c43fea3af7c1c919b5d},
+  keywords = {dblp},
+  pages = {3979-3986},
+  publisher = {IEEE},
+  timestamp = {2014-01-10T00:00:00.000+0100},
+  title = {MAV urban localization from Google street view data.},
+  url = {http://dblp.uni-trier.de/db/conf/iros/iros2013.html#MajdikAS13},
+  year = 2013
+}
+
 @InProceedings{Scheirer12,
 author = {Walter Scheirer and Neeraj Kumar and Peter N. Belhumeur and Terrance E. Boult},
 title = {Multi-Attribute Spaces: Calibration for Attribute Fusion and Similarity Search},
@@ -358,4 +531,125 @@ keywords =    {structure  from motion, remove procedure call, web service},
     volume = {34},
     year = {2012},
     pages = {1704-1716},
+}
+
+
+@inproceedings{Shrivastava11,
+  author = "A. Shrivastava and T. Malisiewicz and A. Gupta and A. A. Efros",
+  title = "Data-driven Visual Similarity for Cross-domain Image Matching",
+  booktitle = "SIGGRAPH ASIA",
+  year = 2011
+}
+
+@inproceedings{Tighe13,
+  title={Finding things: Image parsing with regions and per-exemplar detectors},
+  author={Tighe, J. and Lazebnik, S.},
+  booktitle=cvpr,
+  year={2013},
+}
+
+@InProceedings{gronat13,
+  author = "Gronat, P. and Obozinski, G. and Sivic, J. and Pajdla, T.",
+  title = "Learning and calibrating per-location classifiers for visual place recognition",
+  booktitle = cvpr,
+  year = 2013}
+
+@article{Doersch12,
+  title = {What Makes Paris Look like Paris?},
+  author = {Carl Doersch and Saurabh Singh and Abhinav Gupta and Josef Sivic and Alexei A. Efros},
+  journal = siggraph,
+  volume = {31},
+  number = {4},
+  year = {2012},
+}
+
+@inproceedings{Singh12,
+  author = "S. Singh and A. Gupta and A. A. Efros",
+  title = "Unsupervised Discovery of Mid-Level Discriminative Patches",
+  booktitle = eccv,
+  year = 2012
+}
+
+@inproceedings{Krizhevsky12,
+  author       = {A. Krizhevsky and I. Sutskever and G.~E. Hinton},
+  title        = {ImageNet Classification with Deep Convolutional Neural Networks},
+  booktitle    = nips,
+  year         = {2012},
+}
+
+
+@article{Donahue13,
+  title={DeCAF: A Deep Convolutional Activation Feature for Generic Visual Recognition},
+  author={Donahue, J. and Jia, Y. and Vinyals, O. and Hoffman, J. and Zhang, N. and Tzeng, E. and Darrell, T.},
+  journal={arXiv:1310.1531},
+  year={2013}
+}
+
+@InProceedings{Oquab14,
+   author = "Oquab, M. and Bottou, L. and Laptev, I. and Sivic, J.",
+   title = "Learning and Transferring Mid-Level Image Representations using Convolutional Neural Networks",
+   booktitle = cvpr,
+   year = "2014",
+} 
+
+@article{Sermanet13,
+  author    = {Sermanet, P. and
+               Eigen, D. and
+               Zhang, X. and
+               Mathieu, M. and
+               Fergus, R. and
+               LeCun, Y.},
+  title     = {OverFeat: Integrated Recognition, Localization and Detection
+               using Convolutional Networks},
+  journal   = {arXiv:1312.6229},
+  year      = {2013},
+}
+
+@InProceedings{Klinger13,
+  title={Street View Motion-from-Structure-from-Motion},
+  author={Klingner, B. and Martin, D. and Roseborough, J.},
+   booktitle = iccv,
+   year = "2013",
+}
+
+@inproceedings{Sattler12,
+ author = {Sattler, T. and Leibe, B. and Kobbelt, L.},
+ title = {Improving image-based localization by active correspondence search},
+ booktitle = eccv,
+ year = {2012},
+} 
+
+@InProceedings{Chatfield11,
+  author       = "Chatfield, K. and Lempitsky, V. and Vedaldi, A. and Zisserman, A.",
+  title        = "The devil is in the details: an evaluation of recent feature encoding methods",
+  booktitle    = bmvc,
+  year         = "2011",
+}
+
+@inproceedings{Sattler-BMVC12,
+        title={Image Retrieval for Image-Based Localization Revisited},
+        author={Torsten Sattler and Tobias Weyand and Bastian Leibe and Leif Kobbelt},
+	year={2012},
+	booktitle=bmvc,
+}
+
+@inproceedings{Hariharan12,
+ author = {Hariharan, B. and Malik, J. and Ramanan, D.},
+ title = {Discriminative decorrelation for clustering and classification},
+ booktitle = eccv,
+ year = 2012,
+}
+
+@techreport{Gharbi12,
+  author = "Gharbi, M. and Malisiewicz, T. and Paris, S. and Durand, F.",
+  title = "A {G}aussian Approximation of Feature Space for Fast Image Similarity",
+  institution = "MIT",
+  year = 2012
+}
+
+@inproceedings{Cao13,
+  title={Graph-based discriminative learning for location recognition},
+  author={Cao, S. and Snavely, N.},
+  booktitle=cvpr,
+  year={2013},
 }
